--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,7 +1,18 @@
-<h2>{{ movie.name | uppercase }} Details</h2>
-<div><span>id: </span>{{movie.id}}</div>
-<div>
-  <label>name:
-    <input [(ngModel)]="movie.name" placeholder="name">
-  </label>
+<h2>My Favorite Movies</h2>
+<ul class="movies">
+  <li *ngFor="let movie of movies" 
+    [class.selected]="movie === selectedMovie"
+    (click)="onSelect(movie)">
+    <span class="badge">{{movie.id}}</span> {{movie.name}}
+  </li>
+</ul>
+
+<div *ngIf="selectedMovie">
+  <h2>{{ selectedMovie.name | uppercase }} Details</h2>
+  <div><span>id: </span>{{selectedMovie.id}}</div>
+  <div>
+    <label>name:
+      <input [(ngModel)]="selectedMovie.name" placeholder="name">
+    </label>
+  </div>
 </div>
