--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -3,7 +3,8 @@
   <div><span>id: </span>{{movie.id}}</div>
   <div>
     <label>name:
-      <input [(ngModel)]="movie.name" placeholder="name">
+      <input [(ngModel)]="movie.name" placeholder="name"/>
     </label>
   </div>
+  <button (click)="goBack()">go back</button>
 </div>
